#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[project]
name = "polaris"
version = "1.0.0"
description = "Apache Polaris"
authors = [
    {name = "Apache Software Foundation", email = "dev@polaris.apache.org"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = "Apache-2.0"
keywords = ["Apache Polaris", "Polaris", "Polaris Management Service", "Apache Iceberg REST Catalog API"]
dynamic = ["classifiers"]
dependencies = [
    "urllib3>=1.25.3,<3.0.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.0",
    "typing-extensions>=4.7.1",
    "boto3==1.39.6",
]

[project.urls]
homepage = "https://polaris.apache.org/"
repository = "https://github.com/apache/polaris/"

[tool.poetry]
requires-poetry = "==2.1.3"
packages = [{ include = "polaris" }]

[tool.poetry.group.test.dependencies]
pytest = ">= 7.2.1"
pytest-cov = ">= 2.8.1"
tox = ">= 3.9.0"
flake8 = ">= 4.0.0"
types-python-dateutil = ">= 2.8.19.14"
mypy = ">=1.17, <=1.17.0"
pyiceberg = "==0.9.1"
pre-commit = "==4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
