#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[project]
name = "polaris"
version = "1.1.0"
description = "Apache Polaris"
authors = [
    {name = "Apache Software Foundation", email = "dev@polaris.apache.org"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = "Apache-2.0"
keywords = ["Apache Polaris", "Polaris", "Polaris Management Service", "Apache Iceberg REST Catalog API"]
dynamic = ["classifiers"]
dependencies = [
    "urllib3>=1.25.3,<3.0.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.0",
    "typing-extensions>=4.7.1",
    "boto3~=1.40.6",
]

[project.urls]
homepage = "https://polaris.apache.org/"
repository = "https://github.com/apache/polaris/"

[project.scripts]
polaris = "cli.polaris_cli:main"

[tool.poetry]
requires-poetry = "==2.1.4"
include = [
    { path = "polaris/**", format = ["sdist", "wheel"] },
    { path = "cli/**", format = ["sdist", "wheel"] },
    { path = "templates/**", format = "sdist" },
    { path = "spec/**", format = "sdist" },
]

[tool.poetry.group.dev.dependencies]
pytest = ">= 7.2.1"
pytest-cov = ">= 2.8.1"
flake8 = ">= 4.0.0"
types-python-dateutil = ">= 2.8.19.14"
mypy = ">=1.18, <=1.18.1"
pyiceberg = "==0.10.0"
pre-commit = "==4.3.0"
openapi-generator-cli = "==7.11.0.post0"
pip-licenses = "==5.0.0"
# pin virtualenv version to prevent poetry from upgrading to an incompatible version
# see https://github.com/python-poetry/poetry/issues/10504#issuecomment-3176923981
virtualenv = ">=20.26.6,<20.33.0"

[tool.pip-licenses]
from-classifier = true
# Packages with "UNKNOWN" licenses in pip-licenses metadata.
# These have been manually verified and are known to be compatible with ASF.
ignore-packages = [
    "anyio",                 # MIT License (MIT)
    "build",                 # MIT License (MIT)
    "CacheControl",          # Apache-2.0
    "cffi",                  # MIT License (MIT)
    "click",                 # BSD-3-Clause
    "fsspec",                # BSD-3-Clause
    "jaraco.functools",      # MIT License (MIT)
    "more-itertools",        # MIT License (MIT)
    "mypy_extensions",       # MIT License (MIT)
    "pyparsing",             # MIT License (MIT)
    "RapidFuzz",             # MIT License (MIT)
    "types-python-dateutil", # Apache-2.0
    "typing-inspection",     # MIT License (MIT)
    "typing_extensions",     # PSF-2.0
    "urllib3",               # MIT License (MIT)
    "zipp",                  # MIT License (MIT)
    "zstandard",             # BSD-3-Clause
]
partial-match = true
allow-only = "MIT;Apache;BSD License;PSF-2.0;ISC;The Unlicense;Python Software Foundation License;Mozilla Public License"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "openapi-generator-cli==7.11.0.post0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "generate_clients.py"
