#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[project]
name = "site-checks"
version = "0.0.0"
description = "Apache Polaris - Internal Site Guide Testing"
authors = [{ name = "Apache Software Foundation", email = "dev@polaris.apache.org" }]
license = "Apache-2.0"
requires-python = ">=3.14"
dependencies = [
]

[project.urls]
homepage = "https://polaris.apache.org/"
repository = "https://github.com/apache/polaris/"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.9.0" # keep this as the first item for version parsing
default-groups = [
    "dev"
]

[tool.hatch.build.targets.wheel]
include = ["site_checks"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["test"]
